# Leticia-Pinto-graficos-2017-2

./: semana1.docx
OpenGL3/: OpenGL.sln
OpenGL3/Debug/: OpenGL.ilk
OpenGL3/OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL3/OpenGL/Debug/: vc141.idb
OpenGL3/OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL3/OpenGL/res/shaders/: Basic.shader  Lighting.shader
OpenGL3/OpenGL/src/: Application.cpp  Shader.h  VertexPositions.h
OpenGL3/OpenGL/x64/Debug/: vc141.idb
OpenGL3/OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
OpenGL_antiguo/: practica-1.cbp  practica-1.depend  practica01.cpp
OpenGL_antiguo/GL/: ._Icon_
OpenGL_antiguo/practica-1/: ._Icon_  practica-1.depend  practica-1.layout  practica01.cpp
Tarea2/: CMakeCache.txt  CMakeLists.txt  Common.h  Config.h  Makefile  cmake_install.cmake  compile_commands.json
Tarea2/res/shaders/: basic3d_fs.glsl  basic3d_vs.glsl  basicFragmentShader3d_with_color.glsl  basicVertexShader3d_with_color.glsl  basic_vs.glsl  multilight_fs.glsl  multilight_vs.glsl
Tarea2/trabajo2/: Angel-yjc.h  CMakeLists.txt  Common.h  IndexBuffer.h  LCommon.h  LMesh.cpp  LMesh.h  LMeshBuilder.cpp  LMeshBuilder.h  LShaderManager.cpp  LShaderManager.h  LWindow.cpp  LWindow.h  Makefile  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  ShaderManager.cpp  ShaderManager.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h  cmake_install.cmake  main_5.cpp  main_5.out
Tarea3/: CMakeCache.txt  Common.h  Config.h  Makefile  cmake_install.cmake
Tarea3/res/shaders/: basic_fs.glsl  multilight_fs.glsl  multilight_vs120.glsl  textureshader_fs.glsl  textureshader_vs.glsl
Tarea3/trabajo2/: CMakeLists.txt  Common.h  IndexBuffer.cpp  Makefile  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  ShaderManager.cpp  VertexArray.h  Window.h  cmake_install.cmake  main_5.cpp  main_5.out  prueba.txt
Tarea4/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
Tarea4/res/shaders/: baseFragmentShader3d_with_lighting.glsl  cubemap_fs.glsl  cubemap_vs.glsl  terrainshader_fs.glsl  terrainshader_vs.glsl
Tarea4/trabajo2/: Angel-yjc.h  CMakeLists.txt  Camera.h  Common.h  Makefile  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Model.h  PerlinNoise.h  ShaderManager.cpp  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  cmake_install.cmake  main_5.cpp  main_5.out  mat-yjc-new.h  vec.h
